--- a/assets/style.css
+++ b/assets/style.css
@@ -14,14 +14,19 @@ header ul {
     display: inline-block;
   }
 
-  h1
-  h2
-  h3
-  h4
-  h5
+  h1 {
+    text-align: center;
+    font-size: 80px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+  h2,
+  h3,
+  h4,
+  h5,
   h6 {
     text-align: center;
     border: black;
+    
   }
 
   img {
@@ -29,3 +34,5 @@ header ul {
     width: 250px;
     height: 250px;
   }
+
+  
