--- a/component/form.html
+++ b/component/form.html
@@ -16,21 +16,21 @@
     <!-- copy this section below -->
 
 <div class="field has-addons">
-    <div class="control is-expanded">
+    <div class="control">
         <div class="select is-fullwidth">
-            <select name="country">
-                <option value="Argentina">Argentina</option>
-                <option value="Bolivia">Bolivia</option>
-                <option value="Brazil">Brazil</option>
-                <option value="Chile">Chile</option>
-                <option value="Colombia">Colombia</option>
-                <option value="Ecuador">Ecuador</option>
-                <option value="Guyana">Guyana</option>
-                <option value="Paraguay">Paraguay</option>
-                <option value="Peru">Peru</option>
-                <option value="Suriname">Suriname</option>
-                <option value="Uruguay">Uruguay</option>
-                <option value="Venezuela">Venezuela</option>
+            <select name="State">
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
             </select>
         </div>
     </div>
@@ -73,7 +73,7 @@
             <div class="field has-addons">
                 <p class="control">
                     <a class="button is-static">
-                        +44
+                        +1
                     </a>
                 </p>
                 <p class="control is-expanded">
@@ -87,16 +87,16 @@
 
 <div class="field is-horizontal">
     <div class="field-label is-normal">
-        <label class="label">Department</label>
+        <label class="label">Web Developer</label>
     </div>
     <div class="field-body">
         <div class="field is-narrow">
             <div class="control">
                 <div class="select is-fullwidth">
                     <select>
-                        <option>Business development</option>
-                        <option>Marketing</option>
-                        <option>Sales</option>
+                        <option>Full-Stack</option>
+                        <option>Front-End</option>
+                        <option>Back-End</option>
                     </select>
                 </div>
             </div>
