--- a/component/signup.html
+++ b/component/signup.html
@@ -6,42 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Bart</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+        
 </head>
 
 <body>
 
-
-
-
     <!-- copy this section below -->
+<form class="box">
+    <div class="field">
+        <label class="label">Email</label>
+        <div class="control">
+            <input class="input" type="email" placeholder="e.g. alex@example.com">
+        </div>
+    </div>
 
-<div class="field">
-    <p class="control has-icons-left has-icons-right">
-        <input class="input" type="email" placeholder="Email">
-        <span class="icon is-small is-left">
-            <i class="fas fa-envelope"></i>
-        </span>
-        <span class="icon is-small is-right">
-            <i class="fas fa-check"></i>
-        </span>
-    </p>
-</div>
-<div class="field">
-    <p class="control has-icons-left">
-        <input class="input" type="password" placeholder="Password">
-        <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-        </span>
-    </p>
-</div>
-<div class="field">
-    <p class="control has-icons-left">
-        <input class="input" type="password" placeholder="Password">
-        <span class="icon is-small is-left">
-            <i class="fas fa-lock"></i>
-        </span>
-    </p>
-</div>
+    <div class="field">
+        <label class="label">Password</label>
+        <div class="control">
+            <input class="input" type="password" placeholder="********">
+        </div>
+    </div>
+
+    <div class="field">
+        <label class="label">Password</label>
+        <div class="control">
+            <input class="input" type="password" placeholder="********">
+        </div>
+    </div>
+    <button class="button is-primary">Sign up</button>
+</form>
 
 </body>
 
